[gd_scene load_steps=22 format=2]

[ext_resource path="res://World/InsidePlayerHouse/DisplayHouseObject.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sound effects/Fire/start.mp3" type="AudioStream" id=3]
[ext_resource path="res://Assets/Sound effects/Fire/crackle.mp3" type="AudioStream" id=4]
[ext_resource path="res://Assets/Images/bonfire/4.png" type="Texture" id=5]
[ext_resource path="res://Assets/Images/bonfire/7.png" type="Texture" id=6]
[ext_resource path="res://Assets/Images/bonfire/2.png" type="Texture" id=7]
[ext_resource path="res://Assets/Images/bonfire/3.png" type="Texture" id=8]
[ext_resource path="res://Assets/Images/bonfire/8.png" type="Texture" id=9]
[ext_resource path="res://Assets/Images/bonfire/1.png" type="Texture" id=10]
[ext_resource path="res://Assets/Images/bonfire/stone.png" type="Texture" id=11]
[ext_resource path="res://Assets/Images/bonfire/6.png" type="Texture" id=12]
[ext_resource path="res://Assets/Images/bonfire/5.png" type="Texture" id=13]
[ext_resource path="res://Assets/Images/light.png" type="Texture" id=14]
[ext_resource path="res://Assets/house_objects/fireplace.png" type="Texture" id=15]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 15, 15 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 16, 16 )

[sub_resource type="CircleShape2D" id=5]
radius = 32.0624

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 5 ), ExtResource( 13 ), ExtResource( 12 ), ExtResource( 6 ), ExtResource( 9 ) ],
"loop": true,
"name": "active fire",
"speed": 10.0
} ]

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("SmallLight:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "set night"
length = 8.0
tracks/0/type = "value"
tracks/0/path = NodePath("LargeLight:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SmallLight:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="DisplayHouseObject" type="Node2D"]
script = ExtResource( 1 )

[node name="HouseImageTextureRect" type="TextureRect" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -32.0
margin_right = 32.0
grow_vertical = 0
mouse_filter = 2
texture = ExtResource( 15 )

[node name="CollisionBox" type="Area2D" parent="."]
position = Vector2( 16, -16 )
collision_layer = 64
collision_mask = 64
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionBox"]
light_mask = 0
shape = SubResource( 3 )

[node name="MovementCollision" type="StaticBody2D" parent="."]
input_pickable = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="MovementCollision"]
position = Vector2( 16, -16 )
shape = SubResource( 2 )

[node name="MouseInputBox" type="Area2D" parent="."]
position = Vector2( 16, -16 )
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseInputBox"]
light_mask = 0
shape = SubResource( 4 )

[node name="ColorIndicator" type="Sprite" parent="."]
light_mask = 0
z_index = 1
offset = Vector2( -16, -16 )

[node name="SoundEffects" type="AudioStreamPlayer2D" parent="."]
volume_db = -16.0

[node name="LightFireplaceUI" type="Node2D" parent="."]

[node name="LightFireplaceBox" type="Area2D" parent="LightFireplaceUI"]
visible = false
collision_layer = 4096
collision_mask = 0
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="LightFireplaceUI/LightFireplaceBox"]
position = Vector2( 32, -25 )
shape = SubResource( 5 )
disabled = true

[node name="Fire" type="AnimatedSprite" parent="LightFireplaceUI"]
visible = false
position = Vector2( 32, -40 )
scale = Vector2( 0.075, 0.075 )
frames = SubResource( 6 )
animation = "active fire"

[node name="FireStone" type="Sprite" parent="LightFireplaceUI"]
visible = false
position = Vector2( 32, -40 )
scale = Vector2( 0.075, 0.075 )
texture = ExtResource( 11 )

[node name="FireplaceLight" type="Light2D" parent="LightFireplaceUI"]
visible = false
position = Vector2( 32, 33 )
texture = ExtResource( 14 )
color = Color( 1, 0.368627, 0.0901961, 1 )
energy = 0.5

[node name="FireStartSoundEffects" type="AudioStreamPlayer2D" parent="LightFireplaceUI"]
stream = ExtResource( 3 )
volume_db = -4.0

[node name="FireCrackleSoundEffects" type="AudioStreamPlayer2D" parent="LightFireplaceUI"]
stream = ExtResource( 4 )
volume_db = -6.0

[node name="WindowLightingUI" type="Node2D" parent="."]

[node name="LargeLight" type="Light2D" parent="WindowLightingUI"]
visible = false
position = Vector2( 16, 137 )
scale = Vector2( 1.25, 1.11563 )
texture = ExtResource( 14 )
energy = 0.45
shadow_enabled = true

[node name="SmallLight" type="Light2D" parent="WindowLightingUI"]
visible = false
position = Vector2( 16, -38 )
scale = Vector2( 0.1375, 0.19375 )
texture = ExtResource( 14 )
energy = 0.8

[node name="AnimationPlayer" type="AnimationPlayer" parent="WindowLightingUI"]
anims/RESET = SubResource( 7 )
"anims/set night" = SubResource( 8 )

[connection signal="area_entered" from="CollisionBox" to="." method="_on_CollisionBox_area_entered"]
[connection signal="area_exited" from="CollisionBox" to="." method="_on_CollisionBox_area_exited"]
[connection signal="body_entered" from="CollisionBox" to="." method="_on_CollisionBox_body_entered"]
[connection signal="input_event" from="MouseInputBox" to="." method="_on_MouseInputBox_input_event"]
[connection signal="mouse_entered" from="MouseInputBox" to="." method="_on_MouseInputBox_mouse_entered"]
[connection signal="mouse_exited" from="MouseInputBox" to="." method="_on_MouseInputBox_mouse_exited"]
[connection signal="area_entered" from="LightFireplaceUI/LightFireplaceBox" to="." method="_on_LightFireplaceBox_area_entered"]
[connection signal="area_exited" from="LightFireplaceUI/LightFireplaceBox" to="." method="_on_LightFireplaceBox_area_exited"]
